--- a/02coffeemenu.html
+++ b/02coffeemenu.html
@@ -1,31 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8" />
+<!DOCTYPE html> <!-- The document type declaration defines this document as HTML5 -->
+<html lang="en"> <!-- The language of the document is English -->
+<head> <!-- The head element contains meta-information about the document -->
+<body>
+<meta charset="utf-8" />       <!--Character encoding for HTML5-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Cafe Menu</title>
 <!--connect css-->
-<link href="02styles.css" rel="stylesheet"/>
-</head>
-<body>
-<div class="menu">
-    <main>
-    <h1>CAMPER CAFE</h1>
-    <p class="established">Est. 2020</p>
-    <hr>
-    <section>
+<link href="02styles.css" rel="stylesheet"/> <!-- The link element is used to link external resources like stylesheets -->
+</head> 
+<div class="menu"> <!-- The div element is a generic container for flow content主要用于结构化页面内容，通常与 CSS 和 JavaScript 配合使用来实现样式和交互。 -->
+    <main> <!-- The main element represents the main content of the document -->
+    <h1>CAMPER CAFE</h1> <!-- The h1 element defines the most important heading -->
+    <p class="established">Est. 2020</p> `
+    <hr> <!-- The hr element represents a thematic break in the content --<hr> 是 HTML 中的水平线标签，用于表示内容的主题分隔或段落之间的分隔。-->
+    <section> <!-- The section element represents a standalone section of content -->
         <h2>Coffee</h2>
-        <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="coffee icon"/>
+        <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="coffee icon"/> <!-- The img element is used to embed images in documents -->
         <article class="item">
         <p class="flavor">French Vanilla</p><p class="price">3.00</p>
         </article>
         <article class="item">
-        <p class="flavor">Caramel Macchiato</p><p class="price">3.75</p>
+        <p class="flavor">Caramel Macchiato</p><p class="price">3.75</p> 
         </article>
         <article class="item">
         <p class="flavor">Pumpkin Spice</p><p class="price">3.50</p>
         </article>
-        <article class="item">
+        <article class="item"> 
         <p class="flavor">Hazelnut</p><p class="price">4.00</p>
         </article>
         <article class="item">
