-Learn HTML Forms by Building a Registration Form

--- a/02coffeemenu.html
+++ b/02coffeemenu.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Cafe Menu</title>
 <!--connect css-->
-<link href="02styles.css" rel="stylesheet"/> <!-- The link element is used to link external resources like stylesheets -->
+<link href="02styles.css" rel="stylesheet"/> <!-- The link element is used to link external resources like stylesheets --><!-- Viewport（视口）是指用户在网页或应用程序中实际可见的区域，它随设备屏幕尺寸、浏览器窗口大小或缩放比例而变化。在网页设计和移动开发中，Viewport 是一个核心概念，直接影响内容的布局和用户体验。-->
 </head> 
 <div class="menu"> <!-- The div element is a generic container for flow content主要用于结构化页面内容，通常与 CSS 和 JavaScript 配合使用来实现样式和交互。 -->
     <main> <!-- The main element represents the main content of the document -->
