--- a/000_freeCodeCamp_Survey_Form.html
+++ b/000_freeCodeCamp_Survey_Form.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>freeCodeCamp Survey Form</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="000_styles.css" />
   </head>
   
   <body>
