--- a/250915_cv.html
+++ b/250915_cv.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh">
 <head>
@@ -17,24 +16,50 @@
             margin: 20px auto;
             background-color: #ffffff;
             display: flex;
+            flex-wrap: wrap; 
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
+        /* 新增的样式：用于包含标题和照片的顶部区域 */
+        .header-section {
+            width: 100%; /* 占据容器全部宽度 */
+            padding: 30px 25px 0 25px; /* 上内边距30px，左右25px，下0px */
+            box-sizing: border-box;
+            display: flex; /* 使用Flexbox布局 */
+            align-items: flex-start; /* 顶部对齐 */
+            justify-content: space-between; /* 标题和照片两端对齐 */
+        }
+        .name-and-line {
+            display: flex;
+            flex-direction: column; /* 名字和线垂直排列 */
+            flex-grow: 1; /* 占据剩余空间 */
+            margin-right: 20px; /* 和照片留点间距 */
+        }
+        h1 {
+            font-size: 36px;
+            font-weight: bold;
+            letter-spacing: 4px;
+            margin: 0; /* 移除默认外边距 */
+            padding: 0;
+            text-align: left; 
+            line-height: 1; /* 调整行高，让名字更紧凑 */
+        }
+        .title-line {
+            border: none;
+            border-bottom: 5px solid #455f7a; /* 细灰色线 */
+            margin-top:35px; /* 标题和线之间的距离 */
+            margin-bottom: 0; /* 移除默认外边距 */
+            width: 100%; /* 线条宽度 */
+        }
+
         .left-column {
             width: 33%;
-            background-color: #f2f2f2;
             padding: 30px 25px;
-            color: #333;
+            box-sizing: border-box; 
         }
         .right-column {
             width: 67%;
             padding: 30px 25px;
-        }
-        h1 {
-            text-align: left;
-            font-size: 36px;
-            font-weight: bold;
-            margin: 20px 0 30px 0;
-            letter-spacing: 4px;
+            box-sizing: border-box; 
         }
         h2 {
             font-size: 16px;
@@ -59,7 +84,7 @@
             margin-bottom: 8px;
         }
         .contact-info p {
-            margin: 5px 0;
+            margin: px 0;
         }
         .education-item, .job-item {
             margin-bottom: 20px;
@@ -80,10 +105,10 @@
         .job-item ul li {
             margin-bottom: 10px;
         }
+        /* 调整照片容器的样式，不再需要text-align: right */
         .photo-container {
-            text-align: right;
-            margin-top: -10px;
-            margin-bottom: 20px;
+            flex-shrink: 0; /* 防止照片缩小 */
+            margin-top: -10px; /* 微调，让照片略微上移 */
         }
         .profile-photo {
             width: 120px;
@@ -92,21 +117,6 @@
             object-fit: cover;
             border: 3px solid #f2f2f2;
         }
-        .lang-item {
-            margin-bottom: 15px;
-        }
-        .lang-bar {
-            width: 100%;
-            height: 12px;
-            background-color: #e0e0e0;
-            border-radius: 6px;
-            overflow: hidden;
-            display: flex;
-        }
-        .lang-level {
-            height: 100%;
-            background-color: #555;
-        }
         .lang-label {
             font-size: 10pt;
             color: #777;
@@ -114,8 +124,17 @@
     </style>
 </head>
 <body>
-    <h1>YUTING ZHANG</h1>
     <div class="container">
+        <div class="header-section">
+            <div class="name-and-line">
+                <h1>YUTING<br>ZHANG</h1>
+                <hr class="title-line">
+            </div>
+            <div class="photo-container">
+                <img src="02_Profile_ZHANG_YUTING-2.JPG" alt="Profile Photo" class="profile-photo">
+            </div>
+        </div>
+        
         <div class="left-column">
             <section class="contact-info">
                 <h2>Contact</h2>
@@ -139,21 +158,21 @@
             <section>
                 <h2>Education</h2>
                 <div class="education-item">
+                    <h3>Nara Institute of Science and Technology</h3>
+                    <p><strong>Discipline </strong> Science and Technology<br><strong>Expected Graduation:</strong> Mar 2027</p>
+                </div>
+                <div class="education-item">
                     <h3>Shanghai Lixin University of Accounting and Finance</h3>
-                    <p>Discipline:Insurance<br>Bachelor of Business Administration: Labor and social security<br>2016</p>
+                    <p><strong>Certification </strong> Bachelor of Business Administration<br><strong>Discipline</strong> Insurance<br><strong>Major </strong>Labor and social security<br><strong>Graduation Date </strong>June 2016</p>
                 </div>
                 <div class="education-item">
                     <h3>Shanghai No.4 High School</h3>
-                    <p>Certificate of Higher Education<br>2012</p>
+                    <p><strong>Certification</strong> Higher Education<br>2012</p>
                 </div>
             </section>
         </div>
 
         <div class="right-column">
-            <div class="photo-container">
-                <img src="/Users/yuting-z/Desktop/freecodecamp-web-design/02_Profile_ZHANG_YUTING-2.JPG" alt="Profile Photo" class="profile-photo">
-            </div>
-
             <section>
                 <h2>Experience</h2>
                 <div class="job-item">
@@ -171,26 +190,16 @@
             
             <section>
                 <h2>Languages</h2>
-                <div class="lang-item">
-                    <p>Japanese: C1 <span class="lang-label">(Advanced)</span></p>
-                    <div class="lang-bar">
-                        <div class="lang-level" style="width: 85%;"></div>
-                    </div>
-                </div>
-                <div class="lang-item">
-                    <p>Chinese (Mandarin): C2 <span class="lang-label">(Proficient)</span></p>
-                    <div class="lang-bar">
-                        <div class="lang-level" style="width: 95%;"></div>
-                    </div>
-                </div>
+                <p>English: Advanced - TOEIC : 850</p>
+                <p>Japanese: Advanced - JLPT : N1</p>
+                <p>Chinese (Mandarin): Native </p>
             </section>
 
             <section>
                 <h2>Hobbies and interests</h2>
-                <p>Traveling &bull; Sports &bull; Music &bull; Photographer</p>
+                <p>Traveling &bull; Sports &bull; Music &bull; Photography</p>
             </section>
         </div>
     </div>
 </body>
 </html>
-```
